<?xml version="1.0"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.bosch.osmi</groupId>
	<artifactId>ldapAdapterEXT</artifactId>
	<packaging>pom</packaging>
	<name>ldapAdapterEXT</name>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<liferay.version>6.2.1</liferay.version>

		<!--  User should provide below property configuration based on his/her liferay deployment environment -->
		<liferay.auto.deploy.dir>
			${env.LIFERAY_PATH}/deploy
		</liferay.auto.deploy.dir>
		<liferay.maven.plugin.version>${liferay.version}</liferay.maven.plugin.version>

		<!-- some mem optimization here -->
		<argLine>-Dcatalina.home=${project.build.directory}/home -Xms64m -Xmx128m -XX:MaxPermSize=512m</argLine>

	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>com.liferay.maven.plugins</groupId>
				<artifactId>liferay-maven-plugin</artifactId>
				<version>${liferay.maven.plugin.version}</version>
				<configuration>
					<autoDeployDir>${liferay.auto.deploy.dir}</autoDeployDir>
					<appServerDeployDir>${liferay.app.server.deploy.dir}</appServerDeployDir>
					<appServerLibGlobalDir>${liferay.app.server.lib.global.dir}</appServerLibGlobalDir>
					<appServerPortalDir>${liferay.app.server.portal.dir}</appServerPortalDir>
					<liferayVersion>${liferay.version}</liferayVersion>
					<pluginName>ldapAdapterEXT-ext</pluginName>
					<pluginType>ext</pluginType>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<modules>
		<module>ldapAdapterEXT-ext</module>
		<module>ldapAdapterEXT-ext-impl</module>
		<module>ldapAdapterEXT-ext-lib-global</module>
		<module>ldapAdapterEXT-ext-lib-portal</module>
		<module>ldapAdapterEXT-ext-service</module>
		<module>ldapAdapterEXT-ext-util-bridges</module>
		<module>ldapAdapterEXT-ext-util-java</module>
		<module>ldapAdapterEXT-ext-util-taglib</module>
		<module>ldapAdapterEXT-ext-web</module>
	</modules>
</project>
